--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -4,6 +4,10 @@
   --opacityHighlight: rgba(3, 255, 171, 0.5);
 }
 
+::-webkit-scrollbar {
+  display: hidden;
+}
+
 .homePage {
   height: 100vh;
   width: 100vw;
@@ -22,7 +26,7 @@
 }
 
 .innerText {
-  font-size: 4rem;
+  font-size: clamp(3rem, 3vw, 4rem);
   text-align: center;
   margin: 3px;
   font-weight: bold;
@@ -119,12 +123,57 @@
 .MiddleRight {
   width: 25%;
   text-align: center;
+  overflow-y: auto;
+}
+.MiddleRight::-webkit-scrollbar {
+  display: none;
 }
 
 .ListContainerRight {
-  height: 100%;
+  height: 90%;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
+}
+
+.ButtonHide {
+  margin-top: 2%;
+  background-color: #ff3ce6;
+  box-shadow: 0 0 2rem #ff3ce6;
+  border: solid 1px white;
+  transition: all 0.25s;
+  border-radius: 3px;
+  padding: 5px;
+  -webkit-text-stroke: #03ffab 0.5px;
+  letter-spacing: 2px;
+  font-size: clamp(1.5rem, 2vw, 2.5rem);
+  width: 80%;
+}
+
+.ButtonHide:hover {
+  scale: 1.1;
+}
+
+.listItem {
+  font-size: clamp(1.5rem, 3vw, 3rem);
+  color: rgba(104, 93, 93, 0.75);
+  text-shadow: 0px 0px 1rem var(--accentColor);
+}
+
+.listItemActive {
+  color: rgba(255, 255, 255, 0.99);
+  font-size: clamp(1.5rem, 2vw, 2.5rem);
+  text-shadow: 0 0 1rem var(--highlightColor);
+  padding: 5px;
+}
+
+.MiddleRightTitle {
+  font-size: clamp(1.5rem, 3.5vw, 4rem);
+  color: rgba(104, 93, 93, 0.75);
+  text-shadow: 0px 0px 1rem var(--accentColor);
+  -webkit-text-stroke: 2px var(--highlightColor);
+  letter-spacing: 2px;
+  margin: 0;
+  padding: 5px;
 }
